--- a/themes/academic/layouts/partials/widgets/work_experience.html
+++ b/themes/academic/layouts/partials/widgets/work_experience.html
@@ -19,19 +19,38 @@
     {{ $.Scratch.Set "recent_work_experience" (where $.Site.RegularPages "Type" "work_experience") }}
     {{ $recent_work_experience := $.Scratch.Get "recent_work_experience" }}
     {{ range first $page.Params.count $recent_work_experience }}
-    <div class="pub-list-item" style="margin-bottom: 1rem" itemscope>
-      <img src="{{ .Params.url_logo}}" style="max-width: 100px">
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-      <small>{{ .Params.Company }}</small>
-      <p>
-        {{ .Params.from_year }} -
-        {{ .Params.to_year }}
+    <div style="margin-bottom: 1rem">
+      <p style="line-height: 1.25;margin-bottom: 0;">
+        <a href="{{ .Permalink }}">{{ .Title }}</a><br/>
+        <a href="{{ .Params.url_company}}" style="color: #333;">{{ .Params.Company }}</a>
       </p>
-      <p>{{ .Params.short_description}}</p>
-      <span class="badge badge-primary">
-        {{ i18n "btn_slides" }}
-      </span>
-      <p>{{ partial "publication_links" (dict "content" . "is_list" 1) }}</p>
+
+      <p >{{ .Params.short_description}}</p>
+        {{ range .Params.positions }}
+      <div class="row">
+        <div class="col-md-4">
+          {{ dateFormat "01/2006" .from_year }}
+          -
+          {{ if eq "today" .to_year }}
+          {{ .to_year }}
+          {{else}}
+          {{ dateFormat "01/2006" .to_year }}
+          {{end}}
+        </div>
+        <div class="col-md-8">
+          {{.position}}
+        </div>
+      </div>
+
+      {{ end }}
+      <p>
+        {{ range .Params.skills }}
+        <span class="badge badge-primary">
+          {{ . }}
+        </span>
+        {{ end }}
+      </p>
+
     </div>
     {{ end }}
 
