--- a/themes/academic/layouts/partials/widgets/work_experience.html
+++ b/themes/academic/layouts/partials/widgets/work_experience.html
@@ -21,7 +21,7 @@
     {{ range first $page.Params.count $recent_work_experience }}
     <div style="margin-bottom: 1rem">
       <p style="line-height: 1.25;margin-bottom: 0;">
-        <a href="{{ .Permalink }}">{{ .Title }}</a><br/>
+        <b>{{ .Title }}</b><br/>
         <a href="{{ .Params.url_company}}" style="color: #333;">{{ .Params.Company }}</a>
       </p>
 
