add impressum & privacy.

--- a/themes/academic/layouts/partials/footer_container.html
+++ b/themes/academic/layouts/partials/footer_container.html
@@ -15,7 +15,12 @@
           </span>
         </a>
       </span>
-
+    </p>
+    <p>
+      <a href="impressum">Impressum</a>
+    </p>
+    <p>
+      <a href="privacy">Datenschutzerklärung</a>
     </p>
   </div>
 </footer>
