--- a/themes/academic/layouts/partials/widgets/work_experience.html
+++ b/themes/academic/layouts/partials/widgets/work_experience.html
@@ -20,13 +20,14 @@
     {{ $recent_work_experience := $.Scratch.Get "recent_work_experience" }}
     {{ range first $page.Params.count $recent_work_experience }}
     <div style="margin-bottom: 1rem">
-      <p style="line-height: 1.25;margin-bottom: 0;">
+      <p style="line-height: 1.25;margin-bottom: 0.25rem;">
         <b>{{ .Title }}</b><br/>
         <a href="{{ .Params.url_company}}" style="color: #333;">{{ .Params.Company }}</a>
       </p>
 
-      <p >{{ .Params.short_description}}</p>
-        {{ range .Params.positions }}
+      <p style="margin-bottom: 0.25rem;">{{ .Params.short_description}}</p>
+      <small>{{ .Content | markdownify }}</small>
+      {{ range .Params.positions }}
       <div class="row">
         <div class="col-md-4">
           {{ dateFormat "01/2006" .from_year }}
