--- a/themes/academic/layouts/partials/header.html
+++ b/themes/academic/layouts/partials/header.html
@@ -39,7 +39,7 @@
   {{ with ($scr.Get "google_fonts") }}
   <link rel="stylesheet" href="{{ printf "//fonts.googleapis.com/css?family=%s" . }}">
   {{ end }}
-  <link rel="stylesheet" href="{{ $.Site.BaseURL }}/styles.min.css">
+  <link rel="stylesheet" href="{{ $.Site.BaseURL }}styles.min.css">
 
   <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
   <link rel="icon" type="image/png" href="{{ "img/icon.png" | relURL }}">
