Revert "fix: relative urls"
This reverts commit 7e84141fccd05397c31bdb766fe2144fbd99bfa4.

--- a/themes/custom/layouts/partials/footer_container.html
+++ b/themes/custom/layouts/partials/footer_container.html
@@ -17,10 +17,10 @@
       </span>
     </p>
     <p>
-      <a href="/impressum">Impressum</a>
+      <a href="impressum">Impressum</a>
     </p>
     <p>
-      <a href="/privacy">Datenschutzerklärung</a>
+      <a href="privacy">Datenschutzerklärung</a>
     </p>
   </div>
 </footer>
