--- a/themes/academic/layouts/partials/css/academic.css
+++ b/themes/academic/layouts/partials/css/academic.css
@@ -1413,3 +1413,7 @@ body.dark {
   background: rgb(40, 42, 54);
   color: rgb(248, 248, 242);
 }
+.badge {
+  margin-left: 2px;
+  margin-right: 2px;
+}
