--- a/themes/academic/layouts/partials/footer.html
+++ b/themes/academic/layouts/partials/footer.html
@@ -30,7 +30,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/{{- $js.leaflet.version -}}/leaflet.js"></script>
     {{ end }}
     {{ end }}
-    <script src="{{ $.Site.BaseURL }}js/main.js"></script>
+    <script src="{{ $.Site.BaseURL }}js/hugo-academic.js"></script>
     {{ range .Site.Params.custom_js }}
     <script src="{{ "/js/" | relURL }}{{ . }}"></script>
     {{ end }}
